# FastSudokuSolver

./: BacktrackingSolver.h  CMakeLists.txt  HeuristicsBacktrackingSolver.h  LICENSE  README.md  SudokuBoard.h  SudokuSolver.h  Timer.h  cloc.txt  main.cpp
